--- a/movies/templates/movies/old_round_results.html
+++ b/movies/templates/movies/old_round_results.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 
 {% block page_header %}
-  <h2>Round {{ game_round.round_number }} Results</h2>
+  <h2>Round {{ game_round.round_number }} Results<span style="float: right"><a href="/resultsparty/{{ game_round.round_number }}"><i><small>PARTY VIEW</small></i></a></span></h2>
 {% endblock page_header %}
 
 
