--- a/movies/templates/movies/results.html
+++ b/movies/templates/movies/results.html
@@ -11,7 +11,7 @@
     {% if not current_round.round_completed %}
     &nbsp;<i><small>in progress</small></i>
     {% endif %}
-  </h2>
+  <span style="float: right"><a href="/resultsparty/{{ game_round.round_number }}"><i><small>PARTY VIEW</small></i></a></span></h2>
 {% endblock page_header %}
 
 
