Adding sanity-check to round conclusion to identify any users who have not properly voted, and not throw a 500 exception.

--- a/movies/templates/movies/conclude_round.html
+++ b/movies/templates/movies/conclude_round.html
@@ -12,6 +12,12 @@
 
 {% block content %}
 
+{% if fatal_error %}
+
+  <strong>Fatal Error:</strong> {{ fatal_error|safe }}
+
+{% else %}
+
 <p class="mb-2"><b>Admin Instructions:</b></p>
 <p>
 <ul>
@@ -51,6 +57,7 @@
       <span class="float-right"><small>Not Finalized</small></span>
     {%endif%}
 
+{% endif %}
 
 {% endblock content %}
 
