minor bug fixes

--- a/movies/templates/movies/resultsparty.html
+++ b/movies/templates/movies/resultsparty.html
@@ -782,7 +782,7 @@
               </td>
               <td>
                 <div style="text-align: left; margin-left: 8px">
-                {% if not guess.previously_seen %}
+                {% if not guess.seen_previously %}
                   &#127381; 
                 {% endif %}
                 {% if guess.heard_of %}
